finalized dockerizing app

--- a/helpers/extract-hourly-results-per-building-TH-csv.ipynb
+++ b/helpers/extract-hourly-results-per-building-TH-csv.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
     "import matplotlib.pyplot as plt"
@@ -13,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +28,12 @@
     "\n",
     "# Read in the files\n",
     "assets = pd.read_csv('../input_data/asset.csv', sep='|')\n",
-    "data = pd.read_csv('../output_data/data_TH.tsv', sep='\\t')\n",
+    "data = pd.read_csv('../output_data/data_TH.out', sep='\\t')\n",
+    "\n",
+    "# Create output plot directory if it doesn't exist\n",
+    "plot_dir = '../output_data/plots'\n",
+    "if not os.path.exists(plot_dir):\n",
+    "  os.makedirs(plot_dir)\n",
     "\n",
     "# Initialize variables\n",
     "start_ts = datetime(2022, 1, 1)\n",
@@ -51,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
